--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="profile.css">
 
@@ -17,7 +18,14 @@
           <ul class="navlist">
             <li><a href="home" method="get">Home</a></li>
             <li><a href="orders" method="get">Orders</a></li>
-            <li><a href="notifications" method="get">Notifications</a></li>
+            <li class="li-notifications">
+                <a href="notifications" method="get">Notifications
+                    <button type="button" class="icon-button">
+                        <span class="material-icons">notifications</span>
+                        <span class="icon-button-badge">{{notifs}}</span>
+                    </button>
+                </a>
+            </li>
             <li><a href="profile" method="get">Profile</a></li>
           </ul>
         </nav>
