--- a/views/home.hbs
+++ b/views/home.hbs
@@ -18,14 +18,20 @@
           <ul class="navlist">
             <li><a href="home" method="get">Home</a></li>
             <li><a href="orders" method="get">Orders</a></li>
+
             <li class="li-notifications">
                 <a href="notifications" method="get">Notifications
                     <button type="button" class="icon-button">
                         <span class="material-icons">notifications</span>
-                        <span class="icon-button-badge">{{notifs}}</span>
+
+                        {{#if_greater notifs 0}}
+                          <span class="icon-button-badge">{{notifs}}</span>
+                        {{/if_greater}}
+
                     </button>
                 </a>
             </li>
+           
             <li><a href="profile" method="get">Profile</a></li>
           </ul>
         </nav>
@@ -42,44 +48,6 @@
       <!-- partial -->
       <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.1/jquery.min.js'></script>
       <!-- <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script><script  src="./home.js"></script> -->
-
-      <script>
-        /*
-        //Side Notification Code
-        function showNotification(){
-          const notification = new Notification("New message from dcode!", {
-              body: "Notficatiohn example for Hermes Eye?"
-          });
-
-          
-          notification.onclick = (e) =>{
-            console.log("Here");
-            window.location.href = "https://www.google.com";
-          };
-
-        notification.onclick = function (event) {
-            console.log('Notification clicked.');
-        } 
-          
-          
-        }
-
-        // default, granted, denied
-        console.log(Notification.permission);
-
-        if (Notification.permissionT=== "granted") {
-          // alert("we have permission!");
-            showNotification();
-        } else if (Notification.permission !== "denied") {
-            Notification.requestPermission().then(permission => {
-            // console.log(permission);
-            if (permission === "granted"){
-              showNotification();
-            }
-          });
-        }
-         */    
-      </script>
 
 </body>
 </html>
