--- a/views/notifications.hbs
+++ b/views/notifications.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="notifications.css">
 
-    <title>Orders | Hermes Eye</title>
+    <title>Notifications | Hermes Eye</title>
 </head>
 <body>
     <header id="head">
@@ -18,7 +18,14 @@
           <ul class="navlist">
             <li><a href="home" method="get">Home</a></li>
             <li><a href="orders" method="get">Orders</a></li>
-            <li><a href="notifications" method="get">Notifications</a></li>
+            <li class="li-notifications">
+                <a href="notifications" method="get">Notifications
+                    <button type="button" class="icon-button">
+                        <span class="material-icons">notifications</span>
+                        {{!-- <span class="icon-button-badge">{{notifs}}</span> --}}
+                    </button>
+                </a>
+            </li>
             <li><a href="profile" method="get">Profile</a></li>
           </ul>
         </nav>
