--- a/views/orders.hbs
+++ b/views/orders.hbs
@@ -22,7 +22,11 @@
                 <a href="notifications" method="get">Notifications
                     <button type="button" class="icon-button">
                         <span class="material-icons">notifications</span>
-                        <span class="icon-button-badge">{{notifs}}</span>
+                        
+                        {{#if_greater notifs 0}}
+                          <span class="icon-button-badge">{{notifs}}</span>
+                        {{/if_greater}}
+                        
                     </button>
                 </a>
             </li>
