--- a/views/profile.hbs
+++ b/views/profile.hbs
@@ -7,7 +7,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="profile.css">
 
-    <title>Orders | Hermes Eye</title>
+    <title>Profile | Hermes Eye</title>
 </head>
 <body>
     <header id="head">
@@ -22,7 +22,11 @@
                 <a href="notifications" method="get">Notifications
                     <button type="button" class="icon-button">
                         <span class="material-icons">notifications</span>
-                        <span class="icon-button-badge">{{notifs}}</span>
+                        
+                        {{#if_greater notifs 0}}
+                          <span class="icon-button-badge">{{notifs}}</span>
+                        {{/if_greater}}
+                        
                     </button>
                 </a>
             </li>
