--- a/public/style.css
+++ b/public/style.css
@@ -28,7 +28,7 @@ body {
   width: auto;
   background: #c6e9d7;
   border-radius: 5px;
-  border-left: 5px solid #00c2cb;
+  border-left: 5px solid #7acdf1;
 
   padding: 10px;
 }
