--- a/views/notifications.hbs
+++ b/views/notifications.hbs
@@ -18,14 +18,20 @@
           <ul class="navlist">
             <li><a href="home" method="get">Home</a></li>
             <li><a href="orders" method="get">Orders</a></li>
+
             <li class="li-notifications">
                 <a href="notifications" method="get">Notifications
                     <button type="button" class="icon-button">
                         <span class="material-icons">notifications</span>
-                        {{!-- <span class="icon-button-badge">{{notifs}}</span> --}}
+
+                        {{#if_greater notifs 0}}
+                          <span class="icon-button-badge">{{notifs}}</span>
+                        {{/if_greater}}
+
                     </button>
                 </a>
             </li>
+            
             <li><a href="profile" method="get">Profile</a></li>
           </ul>
         </nav>
@@ -33,6 +39,31 @@
       
       <main>
         <div id="title_header"><h1>Notifications</h1></div>
+
+        {{!-- {{#unless notifications}}
+          <div class="no-notification">
+              No new notifications
+          </div>
+        {{/unless}} --}}
+
+        {{#each notifications}}
+          <div class="notification-container">
+            <a href="http://127.0.0.1:5501/public/test.html" class="notification-link">
+                <div  class="notification-head">
+              
+              
+                    <div class="order-number">Order Number : {{orderID}}</div>   
+                    
+                    <!-- <span class="material-icons">local_shipping</span>
+                    <span class="material-icons">assignment_turned_in</span>
+                    <span class="material-icons">check_circle</span> -->
+                    
+                    <div class="order-status">Status: {{status}}</div>
+                  </div>
+            </a>
+          </div>
+        {{/each}}
+
       </main>
       
       <!-- partial -->
