--- a/views/registration.hbs
+++ b/views/registration.hbs
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" type="text/css" href="registration.css">
     <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
     <style>
@@ -90,8 +91,8 @@
             <div class = "dropdownUser">
               <label for="inputUserRole">Choose role  :</label>
               <select id="inputUserRole" name="role">
-                <option value="twUser" selected>TandW User</option>
-                <option value="clientUser">Client User</option>
+                <option value="Admin" selected>TandW User</option>
+                <option value="Client">Client User</option>
               </select>
             </div>
 
